...
            .padding(
                top = state.statusBarPaddingAnimation,
                start = state.paddingAnimation,
                end = state.paddingAnimation,
            )
            .onGloballyPositioned { model.onHeight(it.size.height) }
            .maestroTestTag("search_bar"),
        shadowElevation = 2.dp,
        colors = SearchBarDefaults.colors(
            containerColor = GasGuruTheme.colors.neutral100,
            dividerColor = GasGuruTheme.colors.neutral100,
        ),
    ) {
...
            model = GasGuruSearchBarModel(),
            searchQuery = "",
            searchResultUiState = SearchResultUiState.EmptyQuery,
            recentSearchQueriesUiState = RecentSearchQueriesUiState.Success(
                recentQueries = listOf(
                    RecentSearchQuery("Barcelona", "1"),
                    RecentSearchQuery("Madrid", "2"),
                    RecentSearchQuery("Valencia", "3"),
                ),
            ),
            state = rememberGasGuruSearchBarState(),
        )
    }
...
