...
                        selectedTab = tabState.selectedTab.value,
                        onTabChange = { selectedTab ->
                            event(StationMapEvent.ChangeTab(selected = StationSortTab.fromValue(selectedTab)))
                        },
                        onStationClick = navigateToDetail,
                        swipeConfig = null,
                        testTag = "map_station_list",
                        tabNames = listOf(
                            stringResource(StationMapRes.string.tab_price),
                            stringResource(StationMapRes.string.tab_distance),
                        ),
                    )
                )
...
