...
private fun PlaceItemPreview() {
    MyApplicationTheme {
        PlaceItem(
            model = PlaceItemModel(
                id = "1",
                icon = Icons.Outlined.Schedule,
                name = "Talavera de la Reina, Spain",
                onClickItem = { }
            ),
            isLastItem = false
        )
    }
}
...
